# repo-scanner

./: .gitignore  README.md  install-context.example.yaml  pyproject.toml
.agents/plugins/: marketplace.json
.claude/skills/check-repository-before-install/references/: verdicts.md
examples/: claude-mcp.json  codex-config-installed.toml  codex-config.toml
plugins/repo-preflight/: .mcp.json
plugins/repo-preflight/.codex-plugin/: plugin.json
plugins/repo-preflight/skills/check-repository-before-install/agents/: openai.yaml
plugins/repo-preflight/skills/check-repository-before-install/references/: install-context.md
skills/check-repository-before-install/: SKILL.md
src/repo_preflight/: __init__.py  cli.py  context.py  github.py  mcp_server.py  models.py  osv.py  scanner.py
tests/: run_tests.py  test_scanner.py
