[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repo-preflight"
version = "0.1.0"
description = "Static install-surface preflight scanner for public GitHub repositories."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
repo-preflight = "repo_preflight.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
